# GeoMoka-Model

./: .gitignore  README.md  datasplit.py  experiment.ipynb  pyproject.toml  requirements.txt  test1.py  test2.py  test3.py  zensical.toml
.VSCodeCounter/2026-02-16_15-52-08/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.github/workflows/: docs.yml
config/: ISPRSPostdam.yaml
config/ISPRS-Postdam/: color.yaml  metadata.yaml  train.yaml  train_dpt.yaml  train_dpt_large.yaml  train_smp.yaml  transform.yaml
config/generic/: metadata.yaml  train_dpt.yaml
dataloader/: ISPRSPostdam.py
docs/: SEGMENTATION_MODELS.md  cli-reference.md  codebase-overview.md  getting-started.md  index.md  training-workflow.md
scripts/: download_isprs_postdam.py  download_pretrained.py
site/: 404.html  index.html  search.json  sitemap.xml
site/cli-reference/: index.html
site/codebase-overview/: index.html
site/getting-started/: index.html
site/markdown/: index.html
site/training-workflow/: index.html
source/: datasplit.py  evaluate.py  experiment.ipynb  inference.py  supervised.py
source/dataloader/: ISPRSPostdam.py  semi.py
source/model/backbone/dinov2_layers/: attention.py
source/model/semseg/: dpt.py
source/util/: utils.py
src/: datasplit.py  evaluate.py  experiment.ipynb  inference.py  supervised.py
src/dataloader/: ISPRSPostdam.py  dataset.py  mask_converter.py  semi.py  supervised.py  transform.py  utils.py  wrapper.py
src/geomoka/_cli/: calibrate.py  scaffold.py  template.py  train.py
src/geomoka/_core/: __init__.py  base.py  mixins.py  registry.py  transform.py
src/geomoka/_core/util/: utils.py
src/geomoka/_template/config/isprs_postdam/: metadata.yaml  train_dpt.yaml  train_smp.yaml
src/geomoka/_template/notebook/: test.ipynb
src/geomoka/_template/notebook/util/: draw.py
src/geomoka/cli/: calibrate.py  datasplit.py  scaffold.py  template.py  train.py
src/geomoka/dataloader/: build_dataset.py  dataset.py  mask_converter.py  transform.py  wrapper.py
src/geomoka/eval/: evaluate.py  metrics.py
src/geomoka/inference/: engine.py  rasterio.py
src/geomoka/losses/: ohem.py
src/geomoka/model/: build_model.py  wrapper.py
src/geomoka/model/semseg/: dpt.py
src/geomoka/segmentation/semantic/flat/: evaluate.py  inference.py  model.py
src/geomoka/segmentation/semantic/flat/dataset/: __init__.py  dataset.py  metadata.py
src/geomoka/segmentation/semantic/flat/method/: __init__.py
src/geomoka/segmentation/semantic/flat/method/supervised/: loader.py  main.py
src/geomoka/segmentation/semantic/flat/method/unimatch_v2/: loader.py  main.py
src/geomoka/segmentation/semantic/flat/models/: __init__.py
src/geomoka/segmentation/semantic/flat/models/dpt/: build.py
src/geomoka/segmentation/semantic/flat/models/dpt/semseg/: dpt.py
src/geomoka/segmentation/semantic/flat/models/smp/: build.py
src/geomoka/template/config/generic/: train_dpt.yaml
src/geomoka/template/config/isprs_postdam/: metadata.yaml  train_dpt.yaml  train_smp.yaml
src/geomoka/template/script/: download_isprs_postdam.py
src/geomoka/template/test/: test.ipynb
src/geomoka/templates/configs/isprs_postdam/: train_dpt.yaml  train_smp.yaml
src/geomoka/templates/scripts/: download_isprs_postdam.py
src/geomoka/templates/tests/: experiment.ipynb
src/geomoka/train/: supervised.py  tester.py  trainer.py  unimatch_v2.py
src/geomoka/util/: utils.py
src/geomoka_model.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/model/backbone/: dinov2.py
src/model/backbone/dinov2_layers/: attention.py
src/model/semseg/: dpt.py
src/util/: build_dataset.py  build_model.py  utils.py
