[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "geomoka-model"
version = "0.1.0"
description = "Geospatial semantic segmentation framework with DINOv2 and SMP support"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Fatah Muria", email = "fatahmurbaut@gmail.com"}
]
keywords = ["segmentation", "geospatial", "remote-sensing", "dinov2", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm",
    "PyYAML",
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "tensorboard",
    "segmentation-models-pytorch>=0.3.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/geomoka-model"
Documentation = "https://github.com/yourusername/geomoka-model#readme"
Repository = "https://github.com/yourusername/geomoka-model.git"
Issues = "https://github.com/yourusername/geomoka-model/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[project.scripts]
geomoka-train = "geomoka.cli.train:main"

